--- a/index.html
+++ b/index.html
@@ -29,6 +29,50 @@
   </head>
   <body class="font-raleway">
     <!-- Header -->
-    
+    <section class="container mx-auto">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+            >
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Destination</a></li>
+              <li><a>Search</a></li>
+            </ul>
+          </div>
+          <h2 class="sm:text-sm lg:text-2xl font-bold cursor-pointer">CounterBoss</h2>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 text-[18px] font-medium">
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Destination</a></li>
+            <li><a>Search</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <button class=" sm:text-sm lg:text-[18px] bg-[#1dd1001a] px-7 py-3 font-bold text-[#1dd100] border-2 border-[#1dd100] rounded-md flex items-center gap-2">Bus <img src="./images/bus-icon.png" alt=""> </button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
