Added Home and Prome Section

--- a/index.html
+++ b/index.html
@@ -74,5 +74,67 @@
         </div>
       </div>
     </section>
+
+    <!-- Home Section -->
+    <section class="container mx-auto">
+      <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
+          <div class="hero-overlay"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-[700px]">
+              <h1 class="mb-5 text-6xl font-bold">End-to-End Travel with <br> <span class="text-[#1dd100]">Counter Boss</span></h1>
+              <p class="mb-5">Your ultimate ticket booking platform, offering seamless reservations for events worldwide. Secure, user-friendly, providing hassle-free access to your favorite experiences.</p>
+              <button class="btn btn-primary bg-[#1dd100] text-black border-none"><a href="#ticketSection">Buy Ticket</a></button>
+            </div>
+          </div>
+        </div>
+  </section>
+
+  <!-- Promo Section -->
+
+  <section class="container mx-auto">
+  <h1 class="text-5xl font-bold text-center mt-12 mb-10">Best offers for you</h1>
+      <div class="flex items-center justify-center gap-20">
+          <div class="bg-[#ffbf0f] p-10 flex items-center justify-center gap-40 sm:w-[200px] lg:w-[570px] h-[220px] rounded-xl seat mt-4">
+              <img class="absolute ml-16" src="./images/cupon-devider.png">
+              <div>
+                  <h2 class="text-3xl font-extrabold mb-2">15% OFF</h2>
+                  <p class="text-[18px] font-bold">on your next purchase</p>
+                  <p class="text-sm font-light">use by January 2024</p>
+              </div>
+              <div>
+                  <h2 class="text-3xl font-extrabold mb-2">NEW15</h2>
+                  <p class="text-[18px] font-medium">Coupon Code</p>
+              </div>
+          </div>
+          <!-- Card 2  -->
+          <div class="bg-[#f78c9c] p-10 flex items-center justify-center gap-40 w-[570px] h-[220px] rounded-xl seat mt-4">
+              <img class="absolute ml-18" src="./images/cupon-devider.png">
+              <div>
+                  <h2 class="text-3xl font-extrabold mb-2">20% OFF</h2>
+                  <p class="text-[17px] font-bold">on your next purchase</p>
+                  <p class="text-sm font-light">use by January 2024</p>
+              </div>
+              <div>
+                  <h2 class="text-3xl font-extrabold mb-2">Couple 20</h2>
+                  <p class="text-[18px] font-medium">Coupon Code</p>
+              </div>
+          </div>
+      </div>
+  <button class=" sm:text-sm lg:text-[18px] px-7 py-3 font-bold text-[#1dd100] border-2 border-[#1dd100] rounded-md flex items-center gap-2 m-auto mt-10">See All Offers</button>
+  </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
