Image Problem Solved

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div> 
                 </div>
                 <div>
-                    <button class=" sm:text-sm lg:text-[18px] bg-[#1dd1001a] px-7 py-3 font-bold text-[#1dd100] border-2 border-[#1dd100] rounded-md flex items-center gap-2"><img src="/images/seat-green.png" alt=""><span id="seatLeft">40</span> Seats left </button>
+                    <button class=" sm:text-sm lg:text-[18px] bg-[#1dd1001a] px-7 py-3 font-bold text-[#1dd100] border-2 border-[#1dd100] rounded-md flex items-center gap-2"><img src="./images/seat-green.png" alt=""><span id="seatLeft">40</span> Seats left </button>
                 </div>
             </div>
         <div class="w-[200px] mt-28">
@@ -315,7 +315,7 @@
             <nav class="cursor-pointer">
                 <h6 class="footer-title">Download Our App</h6> 
                 <div class="grid grid-flow-col gap-4 border-2 border-white rounded-lg p-2">
-                  <img src="/images/playstore.png" alt="">
+                  <img src="./images/playstore.png" alt="">
                   <div>
                       <h2>Get it one</h2>
                       <h2>Google Play</h2>
@@ -340,18 +340,6 @@
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
