--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <li><a>Search</a></li>
             </ul>
           </div>
-          <h2 class="sm:text-sm lg:text-2xl font-bold cursor-pointer">CounterBoss</h2>
+          <h2 class="sm:text-sm lg:text-2xl font-bold cursor-pointer">easyTicket</h2>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1 text-[18px] font-medium">
@@ -81,9 +81,9 @@
           <div class="hero-overlay"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-[700px]">
-              <h1 class="mb-5 text-6xl font-bold">End-to-End Travel with <br> <span class="text-[#1dd100]">Counter Boss</span></h1>
+              <h1 class="mb-5 text-6xl font-bold">End-to-End Travel with <br> <span class="text-[#1dd100]">Easy Ticket</span></h1>
               <p class="mb-5">Your ultimate ticket booking platform, offering seamless reservations for events worldwide. Secure, user-friendly, providing hassle-free access to your favorite experiences.</p>
-              <button class="btn btn-primary bg-[#1dd100] text-black border-none"><a href="#ticketSection">Buy Ticket</a></button>
+              <button class="btn bg-[#1dd100] text-black border-none"><a href="#ticketSection">Buy Ticket</a></button>
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
     <div class="w-[800px] h-[300px] p-10 bg-[#f7f8f8] ml-[130px] rounded-xl seat">
         <div class="flex justify-between">
             <h2 class="text-[18px] font-medium text-gray-500">Route</h2>
-            <h2 class="text-[18px] font-medium">Dhaka-Rangpur</h2>
+            <h2 class="text-[18px] font-medium">Dhaka - Rangpur</h2>
         </div>
         <hr class="mt-5">
 
@@ -169,9 +169,9 @@
         <hr class="mt-5">
         <div>
             <div class="flex items-center gap-5 mt-10">
-                <button class="bg-gray-200 px-7 py-3 rounded-xl seat">Boarding Point - Dhaka</button>
-                <button class="bg-gray-200 px-7 py-3 rounded-xl seat">Dropping Point - Rangpur</button>
-                <button class="bg-gray-200 px-7 py-3 rounded-xl seat">Est. Time - 07 Hour</button>
+                <button disabled class="bg-gray-200 px-7 py-3 rounded-xl seat">Boarding Point - Dhaka</button>
+                <button disabled class="bg-gray-200 px-7 py-3 rounded-xl seat">Dropping Point - Rangpur</button>
+                <button disabled class="bg-gray-200 px-7 py-3 rounded-xl seat">Est. Time - 07 Hour</button>
             </div>
         </div>
     </div>
@@ -184,10 +184,10 @@
         <div>
             <h2 class="text-xl font-bold">Select Your Seat</h2>
             <div class="flex items-center justify-around gap-[500px] mt-10 mb-10">
-                <div class="flex items-center"><img src="./images/seat-gray.png">Available</div>
-                <div class="flex items-center"><img src="./images/seat-green-filled.png">Selected</div>
+                <div class="flex items-center"><img src="./images/seat-gray.png"> Available</div>
+                <div class="flex items-center"><img src="./images/seat-green-filled.png"> Selected</div>
             </div>
-            <button class="bg-gray-300 px-11 py-3 rounded-lg ml-[585px] mb-4"><img width="24" height="24" src="https://img.icons8.com/material-rounded/24/steering-wheel.png" alt="steering-wheel"/></button>
+            <button disabled class="bg-gray-300 px-11 py-3 rounded-lg ml-[585px] mb-4"><img width="24" height="24" src="https://img.icons8.com/material-rounded/24/steering-wheel.png" alt="steering-wheel"/></button>
             <div id="seats" class="grid grid-cols-5 grid-rows-10 gap-6">
                 <button disabled class="bg-[#f7f8f8] px-10 py-3 rounded-xl seat">A</button>
                 <button id="A1" class="bg-[#f7f8f8] px-10 py-3 rounded-xl seat"> <h2> A1</h2></button>
@@ -296,7 +296,6 @@
                 <h2 class="text-xl font-bold mt-2 mb-4">Email ID</h2>
                 <input type="text" required placeholder="Enter Your Email ID" class="input input-bordered w-full max-w-xs" />
             </div>
-            <!-- <div><button disabled id="nextBtn" class="btn btn-primary bg-[#1dd100] text-white border-none w-full mt-5">Next</button></div> -->
             <label for="my_modal_6" disabled id="nextBtn" class="btn btn-primary bg-[#1dd100] text-white border-none w-full mt-5">Next</label>
             
             <div class="flex items-center gap-4 mt-4">
@@ -309,7 +308,7 @@
 
         <footer class="footer items-center p-4 bg-[#030712] text-neutral-content flex justify-between px-20 py-20 mt-10">
             <aside>
-                <h2 class="text-3xl font-bold">Counter Boss</h2>
+                <h2 class="text-3xl font-bold">easyTicket</h2>
                 <p>Your premier ticket booking platform. <br> Streamlined, secure, and user-friendly. </p>
             </aside> 
             <nav class="cursor-pointer">
