--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <section id="ticketSection" class="container mx-auto">
     <div>
-        <h1 class="text-5xl font-bold text-center mt-12 mb-2">Counter Boss</h1>
+        <h1 class="text-5xl font-bold text-center mt-12 mb-2">Easy Ticket</h1>
         <p class="text-center w-[700px] mx-auto mb-5">Your premier ticket booking platform. Streamlined, secure, and user-friendly. </p>
     </div>
     <!-- main ticket -->
